--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -30,6 +30,10 @@
       &-1{
         background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
       }
+
+      &-3{
+        background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+      }
     }
   }
 
