Form mark up and container css added

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -16,6 +16,8 @@ $color-grey-dark: #777;
 $color-white: #FFF;
 $color-black: #000;
 
+$border-radius-3: 3px;
+
 // Font
 $default-font-size: 1.6rem;
 
