--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,7 @@
     right: 6rem;
     border-radius: 50%;
     z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($color-black, .1);
   }
 
   &__background{
@@ -24,17 +25,21 @@
     right: 6.5rem;
     background-image: radial-gradient($color-primary-light, $color-primary-dark);
     z-index: 1000;
+    transition: transform .8s cubic-bezier(0.86, 0, .07, 1);
 
-    transform: scale(80);
+    // transform: scale(80);
   }
 
   &__nav{
     height: 100vh;
-    width: 100%;
+    
     position: fixed;
     top: 0;
     right: 0;
     z-index: 1500;
+    opacity: 0;
+    width: 0;
+    transition: all .8s cubic-bezier(.68, -.55, .265, 1.55);
   }
 
   &__list{
@@ -44,6 +49,7 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
+    width: 100%;
   }
 
   &__item{
@@ -61,16 +67,31 @@
       color: $color-white;
       text-decoration: none;
       text-transform: uppercase;  
-      background-image: linear-gradient(120deg, transparent 0%, orangered 50%, $color-white 50% );
-      background-size: 200%;
+      background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50% );
+      background-size: 220%;
       transition: all .4s;
+
+      span{
+        margin: 0 1.5rem 0 0;
+        display: inline-block;
+      }
     }
     
 
     &:hover,
     &:active{
       background-position: 100%;
-
+      color: $color-primary;
+      transform: translateX(1rem);
     }
+  }
+
+  &__checkbox:checked ~ &__background{
+    transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav{
+    opacity: 1;
+    width: 100%;
   }
 }
